After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 699016 - Memory leak with _gtk_builder_parser_translate
Memory leak with _gtk_builder_parser_translate
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
3.8.x
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-04-27 07:28 UTC by LE GARREC Vincent
Modified: 2013-04-29 02:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix memory leak when _gtk_builder_parser_translate is used (1.38 KB, patch)
2013-04-27 07:28 UTC, LE GARREC Vincent
none Details | Review

Description LE GARREC Vincent 2013-04-27 07:28:12 UTC
Created attachment 242641 [details] [review]
Fix memory leak when _gtk_builder_parser_translate is used

When _gtk_builder_parser_translate is used, the return is never freed.