gtk/gtkbuilderprivate.h
@@ -148,9 +148,9 @@ gboolean  _gtk_builder_flags_from_string (GType       type,
 					  const char *string,
 					  guint      *value,
 					  GError    **error);
-gchar * _gtk_builder_parser_translate (const gchar *domain,
-				       const gchar *context,
-				       const gchar *text);
+const gchar * _gtk_builder_parser_translate (const gchar *domain,
+                                             const gchar *context,
+                                             const gchar *text);
 gchar *   _gtk_builder_get_resource_path (GtkBuilder *builder,
 					  const gchar *string);
 gchar *   _gtk_builder_get_absolute_filename (GtkBuilder *builder,
