gtk/gtkcelllayout.c
@@ -812,7 +812,7 @@ cell_packing_end_element (GMarkupParseContext *context,
       /* translate the string */
       if (parser_data->string->len && parser_data->translatable)
 	{
-	  gchar *translated;
+	  const gchar *translated;
 	  const gchar* domain;
 
 	  domain = gtk_builder_get_translation_domain (parser_data->builder);
